test/fixtures/diagnostics/type-checker/negative/public-boundary-union-alias/input.tysh
namespace Samples.TypeChecker.PublicBoundary

type LocalAmount = decimal | string

fun normalize(input: LocalAmount): string = "ok"

export type PublicAmount = decimal | string

export fun leakParameter(input: LocalAmount): string = "bad"

export fun leakReturn(): LocalAmount =
  if true {
    "bad"
  } else {
    42
  }
